NEW: Starting RadialMenu overhaul
Former-commit-id: e2acaa150a2326e4435118ba7b9ce2bd005a593f

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -214,6 +214,10 @@
 			resetIdle();
         });
 		
+		wsio.on('createRadialMenu', function(menu_data){
+			ui.createRadialMenu(menu_data);
+        });
+		
 		wsio.on('updateMediaStreamFrame', function(data) {
 			wsio.emit('receivedMediaStreamFrame', {id: data.id});
 			
