--- a/public_HTTPS/goTime.html
+++ b/public_HTTPS/goTime.html
@@ -80,8 +80,10 @@
 	var numFrames = 20;
 	var fps = 5;
 	var applications = [];
-	var GoTimeStepForwardBtn, GoTimeStepBackwardBtn, GoTimeBeginningBtn, GoTimeEndBtn, GoTimePlayBtn, GoTimePauseBtn, GoTimeFPS, GoTimeNumFrames;
-	var GoTimePlayer;
+	var GoTimeStepForwardBtn, GoTimeStepBackwardBtn, GoTimeBeginningBtn, GoTimeEndBtn, GoTimePlayBtn, GoTimeFPS, GoTimeNumFrames;
+	var GoTimePlayer, GoTimePlaying = false;
+	var adjustingKeyframe = false;
+	var GoTimeSnap = false, GoTimeLoop = false;
 
 	// Explicitely close web socket when web broswer is closed
 	window.onbeforeunload = function() {
@@ -165,7 +167,6 @@
 		GoTimeBeginningBtn = document.getElementById('GoTimeBeginningBtn');
 		GoTimeEndBtn = document.getElementById('GoTimeEndBtn');
 		GoTimePlayBtn = document.getElementById('GoTimePlayBtn');
-		GoTimePauseBtn = document.getElementById('GoTimePauseBtn');
 		GoTimeFPS = document.getElementById('GoTimeFPS');
 		GoTimeNumFrames = document.getElementById('GoTimeNumFrames');
 
@@ -184,7 +185,6 @@
 		GoTimeBeginningBtn.addEventListener('click',	GoTimeBeginning, false);
 		GoTimeEndBtn.addEventListener('click',			GoTimeEnd, false);
 		GoTimePlayBtn.addEventListener('click',			GoTimePlay, false);
-		GoTimePauseBtn.addEventListener('click',		GoTimePause, false);
 		GoTimeFPS.addEventListener('blur',				GoTimeChangeFPS, false);
 		GoTimeNumFrames.addEventListener('blur',		GoTimeChangeNumFrames, false);
 		GoTimeFPS.value = fps;
@@ -217,10 +217,23 @@
 				setSliderTicks(event.target);
 			},
 			slide: function(e,ui){
-				var ff = {currentFrame: ui.value, numFrames: numFrames};
+				var frame = ui.value;
+				console.log("GoTimeSnap",GoTimeSnap);
+				if(GoTimeSnap){
+					for(var i=0; i<applications.length; i++){
+						for(var k=0; k<applications[i].presentation.length; k++){
+							var diff = Math.abs(applications[i].presentation[k].frame - frame);
+							if(diff <= 3){
+								frame = applications[i].presentation[k].frame;
+								$("#timelineSlider").slider("value",frame);
+							}
+						}
+					}
+				}
+				var ff = {currentFrame: frame, numFrames: numFrames};
 				setTimeout( function(){
 					// console.log(ff);
-					$("#timelineSliderLabel").html(ui.value).position({
+					$("#timelineSliderLabel").html(frame).position({
 						my: 'center top',
 						at: 'center bottom',
 						of: ui.handle,
@@ -250,6 +263,14 @@
 		setTimeout(function(){
 			$("#GoTime_help").dialog("close");
 		},3000);
+
+		$(GoTimeBeginningBtn).button(	{text: false, icons: {primary: "ui-icon-seek-start"}}).width("34px");
+		$(GoTimeStepBackwardBtn).button({text: false, icons: {primary: "ui-icon-seek-prev"}}).width("34px");
+		$(GoTimePlayBtn).button(		{text: false, icons: {primary: "ui-icon-play"}}).width("34px");
+		$(GoTimeStepForwardBtn).button(	{text: false, icons: {primary: "ui-icon-seek-next"}}).width("34px");
+		$(GoTimeEndBtn).button(			{text: false, icons: {primary: "ui-icon-seek-end"}}).width("34px");
+
+
 
 		wsio.on('setupDisplayConfiguration', function(config) {
 			var extraHeight = extraInteraction.clientHeight + footer.clientHeight;
@@ -292,11 +313,6 @@
 			wsio.emit('requestCurrentFrame');
 		});
 		
-		// wsio.on('createAppWindow', function(data) {
-		// 	winMgr.addAppWindow(data);
-		// 	addAppTimeline(data);
-		// });
-
 		wsio.on('createAppWindowPositionSizeOnly', function(data) {
 			winMgr.addAppWindow(data);
 			addAppTimeline(data);
@@ -312,12 +328,33 @@
 		});
 
 		wsio.on('finishedResize', function(data) {
-			// console.log(data);
+			var appID = data.id;
+			var kid;
+			for(var i=0; i<applications.length; i++){
+				if(applications[i].id == appID){
+					for(var k=0; k<applications[i].presentation.length; k++){
+						if(applications[i].presentation[k].frame == currentFrame){
+							kid = k;
+							applications[i].presentation[k].left 	= applications[i].left;
+							applications[i].presentation[k].top	 	= applications[i].top;
+							applications[i].presentation[k].width 	= applications[i].width;
+							applications[i].presentation[k].height 	= applications[i].height;
+							wsio.emit('updateKeyframe', {id: appID, pi: kid, frame: currentFrame, 
+								left: 	applications[i].presentation[k].left,
+								top: 	applications[i].presentation[k].top,
+								width: 	applications[i].presentation[k].width,
+								height: applications[i].presentation[k].height});
+						}
+					}
+				}
+			}
 		});
 
 		wsio.on('deleteElement', function(elem_data) {
 			winMgr.deleteElement(elem_data.elemId);
-			// removeAppTimeline(elem_data.elemId);
+			if(elem_data.inactive != true){
+				removeAppTimeline(elem_data.elemId);
+			}
 		});
 		
 		wsio.on('updateItemOrder', function(order) {
@@ -326,6 +363,29 @@
 		
 		wsio.on('setItemPosition', function(position_data) {
 			winMgr.setItemPosition(position_data);
+			if(!adjustingKeyframe){
+				var appID = position_data.elemId;
+				var kid;
+				for(var i=0; i<applications.length; i++){
+					if(applications[i].id == appID){
+						for(var k=0; k<applications[i].presentation.length; k++){
+							if(applications[i].presentation[k].frame == currentFrame){
+								// console.log("updating position keyframe");
+								kid = k;
+								applications[i].presentation[k].left 	= applications[i].left;
+								applications[i].presentation[k].top	 	= applications[i].top;
+								applications[i].presentation[k].width 	= applications[i].width;
+								applications[i].presentation[k].height 	= applications[i].height;
+								wsio.emit('updateKeyframe', {id: appID, pi: kid, frame: currentFrame, 
+									left: 	applications[i].presentation[k].left,
+									top: 	applications[i].presentation[k].top,
+									width: 	applications[i].presentation[k].width,
+									height: applications[i].presentation[k].height});
+							}
+						}
+					}
+				}
+			}
 		});
 		
 		wsio.on('setItemPositionAndSize', function(position_data) {
@@ -633,7 +693,6 @@
 
     function addAppTimeline(data) {
     	// Add new application to timeline
-    	console.log("adding new app to timeline", data);
     	var exists = false;
     	for(i=0; i<applications.length; i++){
     		if(applications[i].id == data.id){
@@ -651,6 +710,7 @@
 	    	var d = document.createElement("div");
 	    	d.className = "app";
 
+	    	// App label and icon
 	    	var t = document.createTextNode(data.title);
 	    	var img = new Image();
 	    	var applicationName = data.application;
@@ -720,8 +780,10 @@
 				});
 			},500);
 
+
 			$("#jSlider_"+data.id).on("slidestart", function( event, ui ) {
-				var appID = event.target.id.slice(8);
+				adjustingKeyframe = true;
+/*				var appID = event.target.id.slice(8);
 				var kid;
 				for(var i=0; i<applications.length; i++){
 					if(applications[i].id == appID){
@@ -741,7 +803,11 @@
 						}
 					}
 				}
-			} );
+*/			});
+			$("#jSlider_"+data.id).on("slidestop", function( event, ui ) {
+				adjustingKeyframe = false;
+			});
+
 
 			$("#jSlider_"+data.id).on("slide", function( event, ui ) {
 	    		var appID = data.id;
@@ -760,7 +826,7 @@
 									my: 'center top',
 									at: 'center bottom',
 									of: ui.handle,
-									offset: "0, 0"
+									offset: "0, -10"
 								});
 								var pi = findMinIndex(applications[i].presentation);
 								applications[i].presentation[pi].frame = valStart;
@@ -874,12 +940,20 @@
     }
 
 	function updateFrame(ff) {
-		// console.log(ff);
 		currentFrame = ff.currentFrame;
 		numFrames = ff.numFrames;
 		$("#timelineSlider").slider("value", currentFrame);
 		$("#timelineSlider").slider("option", "max", numFrames);
-		// $("#timelineSliderLabel").text(currentFrame);
+		setSliderTicks($("#timelineSlider"));
+
+		for(i=0; i<applications.length; i++){
+			var appSlider = $("#jSlider_"+applications[i].id);
+			appSlider.slider("option", "max", numFrames);
+		}
+
+
+		GoTimeNumFrames.value = numFrames;
+		vals = $("#timelineSlider").slider("option", "max");
 		$("#timelineSliderLabel").html(currentFrame).position({
 			my: 'center top',
 			at: 'center bottom',
@@ -902,7 +976,11 @@
 			// console.log("frame",currentFrame);
 			wsio.emit('changeFrame', {currentFrame: currentFrame, numFrames: numFrames});
 		}else{
-			clearInterval(GoTimePlayer);
+			if(GoTimeLoop){
+				currentFrame = 0;
+				GoTimeStepForward();
+			}else
+				GoTimePause();
 		}
 	}
 	function GoTimeStepBackward(){
@@ -946,18 +1024,26 @@
 	}
 
 	function GoTimePlay(){
-		clearInterval(GoTimePlayer);
-		if(currentFrame == numFrames)
-			currentFrame = 0;
-		GoTimeStepForward();
-		GoTimePlayer = setInterval(function(){
-			if(currentFrame <= numFrames){
-				GoTimeStepForward();
-			}
-		}, 1000/fps);
+		if(!GoTimePlaying){
+			clearInterval(GoTimePlayer);
+			if(currentFrame == numFrames)
+				currentFrame = 0;
+			GoTimeStepForward();
+			GoTimePlayer = setInterval(function(){
+				if(currentFrame <= numFrames){
+					GoTimeStepForward();
+				}
+			}, 1000/fps);
+			$(GoTimePlayBtn).button({icons: {primary: "ui-icon-pause"}});
+			GoTimePlaying = true;
+		}else{
+			GoTimePause();
+		}
 	}
 	function GoTimePause(){
 		clearInterval(GoTimePlayer);
+		$(GoTimePlayBtn).button({icons: {primary: "ui-icon-play"}});
+		GoTimePlaying = false;
 	}
 	function GoTimeChangeFPS(){
 		fps = parseInt(GoTimeFPS.value);
@@ -995,14 +1081,14 @@
 				my: 'center top',
 				at: 'center bottom',
 				of: handleA,
-				offset: "0, 0"
+				offset: "0, -10"
 			});
 			handleB = $(uiHandle).get(1);
 			$("#stop_"+applications[i].id).position({
 				my: 'center top',
 				at: 'center bottom',
 				of: handleB,
-				offset: "0, 0"
+				offset: "0, -10"
 			});
 
 		}
@@ -1045,21 +1131,19 @@
     }
 
 	function setSliderTicks(el) {
-		console.log("creating ticks");
 		var slide =  $(el);
-		var max =  slide.slider("option", "max");    
-		var min =  slide.slider("option", "min");    
+		var min =  slide.slider("option", "min");
+		var max =  slide.slider("option", "max");
+		var numTicks = parseInt(max / 10);
 		var spacing =  100 / (max - min);
 
 		slide.find('.ui-slider-tick-mark').remove();
 		for (var i = 0; i < max-min ; i++) {
-			if((i+1)%5 == 0)
+			if((i+1)%numTicks == 0)
 				$('<span class="ui-slider-tick-mark">'+(i+1)+'</span>').css('left', (spacing * i) +  '%').appendTo(slide);
 			else
 				$('<span class="ui-slider-tick-mark"></span>').css('left', (spacing * i) +  '%').appendTo(slide);
 		}
-		// TODO: fix bug that delays tick redraw
-		// $(el).hide().show(1000);
 	}
 
 
@@ -1116,9 +1200,14 @@
 				<label class="sageLabel">Tile applications:</label><button id="tileBtn" type="button">Tile all</button>
 			</div>
 			<div id="GoTimeControls">
-				<label class="sageLabel">Seek:</label><button id="GoTimeStepBackwardBtn" type="button">Backward</button> <button id="GoTimeStepForwardBtn" type="button">Forward</button>
-				<label class="sageLabel">Go to:</label><button id="GoTimeBeginningBtn" type="button">Beginning</button> <button id="GoTimeEndBtn" type="button">End</button>
-				<label class="sageLabel">Controls:</label><button id="GoTimePlayBtn" type="button">Play</button> <button id="GoTimePauseBtn" type="button">Pause</button>
+				<div id="GoTimeControlButtons">
+					<button id="GoTimeBeginningBtn" class="GoTimeBtn" type="button">Beginning</button>
+					<button id="GoTimeStepBackwardBtn" type="button">Back</button>
+					<button id="GoTimePlayBtn" type="button">Play</button>
+					<button id="GoTimeStepForwardBtn" type="button">Forward</button>
+					<button id="GoTimeEndBtn" type="button">End</button>
+				</div>
+
 				<label class="sageLabel">FPS:</label><input id="GoTimeFPS" type="text" size=5></text>
 				<label class="sageLabel">Num Frames:</label><input id="GoTimeNumFrames" type="text" size=5></text>
 			</div>
@@ -1126,7 +1215,12 @@
 		</div>
 
 		<!-- Timeline -->
-		<div class="timeline"><div id="GoTimeHelpBtn"><a href='#' onclick='$("#GoTime_help").dialog("open");'>?</a></div><ul id="appList"><li id="timelineSliderLI"><div id="timelineSliderDiv">Timeline: <div id="timelineSlider"></div><div id="timelineSliderLabel"></div></div></li></ul></div>
+		<div class="timeline">
+			<div id="GoTimeOptions">
+				<div id="GoTimeHelpBtn"><a href='#' onclick='$("#GoTime_help").dialog("open");'>Help</a>&nbsp;</div>
+				<div id="GoTimeSnap"><label for="GoTimeSnapBox"><input type="checkbox" id="GoTimeSnapBox" onclick='GoTimeSnap = !GoTimeSnap;'> Snap</label></div><div id="GoTimeLoop"><label for="GoTimeLoopBox"><input type="checkbox" id="GoTimeLoopBox" onclick='GoTimeLoop = !GoTimeLoop;'> Loop</label></div>
+			</div>
+			<ul id="appList"><li id="timelineSliderLI"><div id="timelineSliderDiv">Timeline: <div id="timelineSlider"></div><div id="timelineSliderLabel"></div></div></li></ul></div>
 		
 		<div id="textWidthTest"></div>
 		<canvas id="mediaCanvas" style="display: none;"></canvas>
@@ -1192,7 +1286,7 @@
 				<ul>
 					<li>Drag the slider along the timeline to change the current frame</li>
 					<li>Adjust each asset's start and stop times by dragging their individual slider handles</li>
-					<li>Store the size and position for each asset by making your adjustments and then clicking the asset's start or stop handle</li>
+					<li>Record the size and position for each asset by making your adjustments while on a keyframe. Turn on snapping to make this easier.</li>
 				</ul>
 			</div>
 		</div>
