NEW: Radial menu displays, receives events
Former-commit-id: 2e69b3616c09a8d2d1599570b3d98416a8c8f036

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -218,12 +218,8 @@
 			ui.createRadialMenu(menu_data);
         });
 		
-		wsio.on('createRadialMenu', function(menu_data){
-			ui.createRadialMenu(menu_data);
-        });
-		
-		wsio.on('updateRadialMenuPosition', function(pointer_data){
-			ui.updateRadialMenuPosition(pointer_data);
+		wsio.on('radialMenuEvent', function(menu_data){
+			ui.updateRadialMenu(menu_data);
         });
 		
 		wsio.on('updateMediaStreamFrame', function(data) {
